fied transaction back to contained scrolled container, added padding to lst transac card to ensure visibility

--- a/src/components/dashboard/AccountDashboard.scss
+++ b/src/components/dashboard/AccountDashboard.scss
@@ -83,7 +83,7 @@
     grid-row: 2;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    // height: 52vh;
+    height: 50vh;
     overflow: hidden;
     column-gap: 2vw;
     padding: 0 1vw;
