--- a/src/components/transactions/Transactions.scss
+++ b/src/components/transactions/Transactions.scss
@@ -2,6 +2,9 @@
   display: grid;
   row-gap: 1vh;
   height: fit-content;
+  max-height: 100%;
+  margin-bottom: 3vh;
+  // overflow-y: auto;
 
   &_none {
     margin: 1vh 0;
